--- a/client/src/styles/register.module.css
+++ b/client/src/styles/register.module.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'DynaPuff', cursive;  
+}
 .title {
   color: red;
+}
+.body{ 
+  background-color: #222;
+  color: #ddd;
+  width: 100vw;
+  height: 90vh; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
