--- a/client/src/styles/nav.module.css
+++ b/client/src/styles/nav.module.css
@@ -1,5 +1,5 @@
 .nav {
-  background-color: rgba(57, 57, 58, 0.699);
+  background-color: #2D394B;
   display: flex;
   justify-content: space-between;
 }
