--- a/client/src/styles/peliculas.module.css
+++ b/client/src/styles/peliculas.module.css
@@ -8,27 +8,114 @@
 
 
 .movies {
-  margin-top: 5%;
+  margin-top: 1%;
   display: grid;
   grid-template-columns: 2fr 2fr 2fr;
   place-items: center;
-  gap: 5%;
   padding: 15px;
 }
 
 .movie {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 5%;
   gap: 15px;
-  width: 90%;
-  height: 90%;
+  width: 80%;
+  height: 70%;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.288), 0 1px 2px 0 rgba(0, 0, 0, 0.534);
   transition: all 300ms ease;
 }
 
-.movie:hover {
-  transform: translateY(-8%);
+.buttons {
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menos {
+  padding-inline: 5%;
+  width: 30%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.mas {
+  padding-inline: 5%;
+  width: 30%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.boton {
+  background-color: transparent;
+  color: #ddd;
+  border: none;
+  font-size: 1rem;
+  width: 30%;
+  height: 150%;
+  transition: all 300ms ease;
+}
+
+.boton:hover {
+  background-color: #ddd;
+  color: #222;
+}
+
+.img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+}
+
+.contTitle {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  background-color: transparent;
+  color: transparent;
+  width: 26.5%;
+  height: 9.4%;
+  transition: all 300ms ease-in-out;
+}
+
+.contTitle:hover {
+  background-color: rgba(34, 34, 34, 0.505);
+  backdrop-filter: blur(4px);
+  color: #ddd;
+}
+
+.nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav h1{
+  padding-left: 20px;
+}
+
+.sbutton {
+  width: 30%;
+  height: 80px;
+  background-color: transparent;
+  color: #ddd;
+  border: #36e 2px solid;
+  transition: all 300ms ease;
+}
+
+.sbutton:hover {
+  background-color: #36e;
+}
+
+.nbotones {
+  width: 30%;
+  display: flex;
+  align-items: center;
 }
