--- a/client/src/styles/register.module.css
+++ b/client/src/styles/register.module.css
@@ -14,7 +14,7 @@
   background-color: #111;
   color: #ddd;
   width: 98.75vw;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,7 +28,7 @@
   flex-direction: column;
   align-items: center;
   width: 50%;
-  height: 60%;
+  height: 75%;
   background-color: #222;
   gap: 8%;
   padding-top: 2%;
@@ -49,4 +49,10 @@
 .input1:focus {
   transition: 300ms;
   border-bottom: 2px solid #eee;
+}
+
+.label {
+  width: 70%;
+  display: flex;
+  justify-content: baseline;
 }
