--- a/client/src/styles/topRated.module.css
+++ b/client/src/styles/topRated.module.css
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: 2fr 2fr 2fr;
   gap: 5%;
+  text-decoration: none;
+  color: #ddd;
 }
 
 .movie {
@@ -16,4 +18,6 @@
   flex-direction: column;
   align-items: center;
   gap: 15px;
+  text-decoration: none;
+  color: #ddd
 }
